@@ -1,0 +1,27 @@
+comm.arilou.dialogue = CONVERSATION:comm/arilou/arilou.txt:comm/arilou/:comm/arilou/arilou.ts
+comm.chmmr.dialogue = CONVERSATION:comm/chmmr/chmmr.txt:comm/chmmr/:comm/chmmr/chmmr.ts
+comm.commander.dialogue = CONVERSATION:comm/comandr/comandr.txt:comm/comandr/:comm/comandr/comandr.ts
+comm.druuge.dialogue = CONVERSATION:comm/druuge/druuge.txt:comm/druuge/:comm/druuge/druuge.ts
+comm.ilwrath.dialogue = CONVERSATION:comm/ilwrath/ilwrath.txt:comm/ilwrath/:comm/ilwrath/ilwrath.ts
+comm.kohrah.dialogue = CONVERSATION:comm/blackur/blackur.txt:comm/blackur/:comm/blackur/blackur.ts
+comm.melnorme.dialogue = CONVERSATION:comm/melnorm/melnorm.txt:comm/melnorm/:comm/melnorm/melnorm.ts
+comm.mycon.dialogue = CONVERSATION:comm/mycon/mycon.txt:comm/mycon/:comm/mycon/mycon.ts
+comm.orz.dialogue = CONVERSATION:comm/orz/orz.txt:comm/orz/:comm/orz/orz.ts
+comm.pkunk.dialogue = CONVERSATION:comm/pkunk/pkunk.txt:comm/pkunk/:comm/pkunk/pkunk.ts
+comm.shofixti.dialogue = CONVERSATION:comm/shofixt/shofixt.txt:comm/shofixt/:comm/shofixt/shofixt.ts
+comm.slyhome.dialogue = CONVERSATION:comm/slyhome/slyhome.txt:comm/slyhome/:comm/slyhome/slyhome.ts
+comm.slylandro.dialogue = CONVERSATION:comm/slyland/slyland.txt:comm/slyland/:comm/slyland/slyland.ts
+comm.spahome.dialogue = CONVERSATION:comm/spahome/spahome.txt:comm/spahome/:comm/spahome/spahome.ts
+comm.spathi.dialogue = CONVERSATION:comm/spathi/spathi.txt:comm/spathi/:comm/spathi/spathi.ts
+comm.starbase.dialogue = CONVERSATION:comm/starbas/starbas.txt:comm/starbas/:comm/starbas/starbas.ts
+comm.supox.dialogue = CONVERSATION:comm/supox/supox.txt:comm/supox/:comm/supox/supox.ts
+comm.syreen.dialogue = CONVERSATION:comm/syreen/syreen.txt:comm/syreen/:comm/syreen/syreen.ts
+comm.talkingpet.dialogue = CONVERSATION:comm/talkpet/talkpet.txt:comm/talkpet/:comm/talkpet/talkpet.ts
+comm.thraddash.dialogue = CONVERSATION:comm/thradd/thradd.txt:comm/thradd/:comm/thradd/thradd.ts
+comm.umgah.dialogue = CONVERSATION:comm/umgah/umgah.txt:comm/umgah/:comm/umgah/umgah.ts
+comm.urquan.dialogue = CONVERSATION:comm/urquan/urquan.txt:comm/urquan/:comm/urquan/urquan.ts
+comm.utwig.dialogue = CONVERSATION:comm/utwig/utwig.txt:comm/utwig/:comm/utwig/utwig.ts
+comm.vux.dialogue = CONVERSATION:comm/vux/vux.txt:comm/vux/:comm/vux/vux.ts
+comm.yehat.dialogue = CONVERSATION:comm/yehat/yehat.txt:comm/yehat/:comm/yehat/yehat.ts
+comm.yehat.rebel.dialogue = CONVERSATION:comm/rebel/rebel.txt:comm/rebel/:comm/rebel/rebel.ts
+comm.zoqfotpik.dialogue = CONVERSATION:comm/zoqfot/zoqfot.txt:comm/zoqfot/:comm/zoqfot/zoqfot.ts
